[package]
name = "trasy"
version = "0.1.0"
edition = "2021"
description = "A library for error handling with tracing and backtrace support"
license = "Apache-2.0"
repository = "https://github.com/reoring/trasy"
keywords = ["error-handling", "tracing", "backtrace"]
categories = ["development-tools::debugging", "no-std"]

[dependencies]
tracing = "0.1.40"
tracing-error = "0.2.0"
