[package]
name = "trasy"
version = "0.1.4"
edition = "2021"
description = "A library for error handling with tracing and backtrace support"
license = "Apache-2.0"
repository = "https://github.com/reoring/trasy"
keywords = ["error-handling", "tracing", "backtrace"]
categories = ["development-tools::debugging", "no-std"]

[dependencies]
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.23" 
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }